--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-      body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
-      /* Custom scrollbar for cleaner UI */
+      body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; -webkit-font-smoothing: antialiased; }
+      /* Focus visible para accesibilidad */
+      button:focus-visible, input:focus-visible, select:focus-visible, [role="dialog"]:focus-visible { outline: 2px solid #3b82f6; outline-offset: 2px; }
+      /* Custom scrollbar */
       ::-webkit-scrollbar { width: 6px; height: 6px; }
       ::-webkit-scrollbar-track { background: transparent; }
       ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 3px; }
